miniextendr-macros/tests/ui/impl_on_non_struct.stderr
error[E0277]: the trait bound `NotAStruct: TypedExternal` is not satisfied
  --> tests/ui/impl_on_non_struct.rs:11:6
   |
10 | #[miniextendr]
   | -------------- required by a bound introduced by this call
11 | impl NotAStruct {
   |      ^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `TypedExternal` is not implemented for `NotAStruct`
  --> tests/ui/impl_on_non_struct.rs:5:1
   |
 5 | enum NotAStruct {
   | ^^^^^^^^^^^^^^^
   = help: the following other types implement trait `TypedExternal`:
             &'static [T]
             &'static mut [T]
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
           and $N others
note: required by a bound in `ExternalPtr::<()>::downcast_ref`
  --> $WORKSPACE/miniextendr-api/src/externalptr.rs
   |
   |     pub fn downcast_ref<T: TypedExternal>(&self) -> Option<&T> {
   |                            ^^^^^^^^^^^^^ required by this bound in `ExternalPtr::<()>::downcast_ref`
help: use a unary tuple instead
   |
10 | (#[miniextendr],)
   | +              ++
